Kaggle Notebook | Titanic Competition Analysis | Version 10

--- a/titanic-competition-analysis.ipynb
+++ b/titanic-competition-analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57a35a8b",
+   "id": "0905760f",
    "metadata": {
     "papermill": {
-     "duration": 0.005302,
-     "end_time": "2024-01-27T17:13:18.963952",
+     "duration": 0.00511,
+     "end_time": "2024-01-27T17:16:39.454066",
      "exception": false,
-     "start_time": "2024-01-27T17:13:18.958650",
+     "start_time": "2024-01-27T17:16:39.448956",
      "status": "completed"
     },
     "tags": []
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4f10085",
+   "id": "60bf56bf",
    "metadata": {
     "papermill": {
-     "duration": 0.004893,
-     "end_time": "2024-01-27T17:13:18.974338",
+     "duration": 0.004407,
+     "end_time": "2024-01-27T17:16:39.463537",
      "exception": false,
-     "start_time": "2024-01-27T17:13:18.969445",
+     "start_time": "2024-01-27T17:16:39.459130",
      "status": "completed"
     },
     "tags": []
@@ -38,21 +38,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a3cf9d1",
+   "id": "9fb61c37",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:18.987098Z",
-     "iopub.status.busy": "2024-01-27T17:13:18.986189Z",
-     "iopub.status.idle": "2024-01-27T17:13:19.443699Z",
-     "shell.execute_reply": "2024-01-27T17:13:19.442238Z"
+     "iopub.execute_input": "2024-01-27T17:16:39.475337Z",
+     "iopub.status.busy": "2024-01-27T17:16:39.474524Z",
+     "iopub.status.idle": "2024-01-27T17:16:39.917574Z",
+     "shell.execute_reply": "2024-01-27T17:16:39.916104Z"
     },
     "papermill": {
-     "duration": 0.467187,
-     "end_time": "2024-01-27T17:13:19.446622",
+     "duration": 0.452306,
+     "end_time": "2024-01-27T17:16:39.920537",
      "exception": false,
-     "start_time": "2024-01-27T17:13:18.979435",
+     "start_time": "2024-01-27T17:16:39.468231",
      "status": "completed"
     },
     "tags": []
@@ -91,19 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "21f849b8",
+   "id": "52d3ccbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:19.458654Z",
-     "iopub.status.busy": "2024-01-27T17:13:19.458126Z",
-     "iopub.status.idle": "2024-01-27T17:13:19.513174Z",
-     "shell.execute_reply": "2024-01-27T17:13:19.511947Z"
+     "iopub.execute_input": "2024-01-27T17:16:39.933749Z",
+     "iopub.status.busy": "2024-01-27T17:16:39.932662Z",
+     "iopub.status.idle": "2024-01-27T17:16:39.981993Z",
+     "shell.execute_reply": "2024-01-27T17:16:39.980804Z"
     },
     "papermill": {
-     "duration": 0.064125,
-     "end_time": "2024-01-27T17:13:19.515849",
+     "duration": 0.058806,
+     "end_time": "2024-01-27T17:16:39.984710",
      "exception": false,
-     "start_time": "2024-01-27T17:13:19.451724",
+     "start_time": "2024-01-27T17:16:39.925904",
      "status": "completed"
     },
     "tags": []
@@ -261,19 +261,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e5de073e",
+   "id": "b8642aa8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:19.528504Z",
-     "iopub.status.busy": "2024-01-27T17:13:19.527720Z",
-     "iopub.status.idle": "2024-01-27T17:13:19.553472Z",
-     "shell.execute_reply": "2024-01-27T17:13:19.552534Z"
+     "iopub.execute_input": "2024-01-27T17:16:39.997382Z",
+     "iopub.status.busy": "2024-01-27T17:16:39.996990Z",
+     "iopub.status.idle": "2024-01-27T17:16:40.022953Z",
+     "shell.execute_reply": "2024-01-27T17:16:40.021793Z"
     },
     "papermill": {
-     "duration": 0.034891,
-     "end_time": "2024-01-27T17:13:19.556052",
+     "duration": 0.03563,
+     "end_time": "2024-01-27T17:16:40.025697",
      "exception": false,
-     "start_time": "2024-01-27T17:13:19.521161",
+     "start_time": "2024-01-27T17:16:39.990067",
      "status": "completed"
     },
     "tags": []
@@ -418,19 +418,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9be84c85",
+   "id": "2175801c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:19.570690Z",
-     "iopub.status.busy": "2024-01-27T17:13:19.569366Z",
-     "iopub.status.idle": "2024-01-27T17:13:19.583070Z",
-     "shell.execute_reply": "2024-01-27T17:13:19.581168Z"
+     "iopub.execute_input": "2024-01-27T17:16:40.038912Z",
+     "iopub.status.busy": "2024-01-27T17:16:40.038461Z",
+     "iopub.status.idle": "2024-01-27T17:16:40.049515Z",
+     "shell.execute_reply": "2024-01-27T17:16:40.048675Z"
     },
     "papermill": {
-     "duration": 0.024275,
-     "end_time": "2024-01-27T17:13:19.586341",
+     "duration": 0.021099,
+     "end_time": "2024-01-27T17:16:40.052537",
      "exception": false,
-     "start_time": "2024-01-27T17:13:19.562066",
+     "start_time": "2024-01-27T17:16:40.031438",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7d6629ba",
+   "id": "28b64389",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:19.600773Z",
-     "iopub.status.busy": "2024-01-27T17:13:19.600053Z",
-     "iopub.status.idle": "2024-01-27T17:13:19.608668Z",
-     "shell.execute_reply": "2024-01-27T17:13:19.607280Z"
+     "iopub.execute_input": "2024-01-27T17:16:40.066350Z",
+     "iopub.status.busy": "2024-01-27T17:16:40.065726Z",
+     "iopub.status.idle": "2024-01-27T17:16:40.073151Z",
+     "shell.execute_reply": "2024-01-27T17:16:40.071903Z"
     },
     "papermill": {
-     "duration": 0.019032,
-     "end_time": "2024-01-27T17:13:19.611419",
+     "duration": 0.016876,
+     "end_time": "2024-01-27T17:16:40.075368",
      "exception": false,
-     "start_time": "2024-01-27T17:13:19.592387",
+     "start_time": "2024-01-27T17:16:40.058492",
      "status": "completed"
     },
     "tags": []
@@ -490,19 +490,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ba31f0b2",
+   "id": "9c95530e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:19.625238Z",
-     "iopub.status.busy": "2024-01-27T17:13:19.624816Z",
-     "iopub.status.idle": "2024-01-27T17:13:19.656349Z",
-     "shell.execute_reply": "2024-01-27T17:13:19.654962Z"
+     "iopub.execute_input": "2024-01-27T17:16:40.089696Z",
+     "iopub.status.busy": "2024-01-27T17:16:40.088548Z",
+     "iopub.status.idle": "2024-01-27T17:16:40.116894Z",
+     "shell.execute_reply": "2024-01-27T17:16:40.115558Z"
     },
     "papermill": {
-     "duration": 0.04194,
-     "end_time": "2024-01-27T17:13:19.659237",
+     "duration": 0.038202,
+     "end_time": "2024-01-27T17:16:40.119510",
      "exception": false,
-     "start_time": "2024-01-27T17:13:19.617297",
+     "start_time": "2024-01-27T17:16:40.081308",
      "status": "completed"
     },
     "tags": []
@@ -647,19 +647,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3579b234",
+   "id": "41d12745",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:19.674957Z",
-     "iopub.status.busy": "2024-01-27T17:13:19.674544Z",
-     "iopub.status.idle": "2024-01-27T17:13:20.070058Z",
-     "shell.execute_reply": "2024-01-27T17:13:20.068814Z"
+     "iopub.execute_input": "2024-01-27T17:16:40.134193Z",
+     "iopub.status.busy": "2024-01-27T17:16:40.133749Z",
+     "iopub.status.idle": "2024-01-27T17:16:40.508697Z",
+     "shell.execute_reply": "2024-01-27T17:16:40.507452Z"
     },
     "papermill": {
-     "duration": 0.406736,
-     "end_time": "2024-01-27T17:13:20.072928",
+     "duration": 0.385301,
+     "end_time": "2024-01-27T17:16:40.511384",
      "exception": false,
-     "start_time": "2024-01-27T17:13:19.666192",
+     "start_time": "2024-01-27T17:16:40.126083",
      "status": "completed"
     },
     "tags": []
@@ -694,19 +694,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f271669f",
+   "id": "608b5aa9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:20.089120Z",
-     "iopub.status.busy": "2024-01-27T17:13:20.088697Z",
-     "iopub.status.idle": "2024-01-27T17:13:20.119833Z",
-     "shell.execute_reply": "2024-01-27T17:13:20.118534Z"
+     "iopub.execute_input": "2024-01-27T17:16:40.527484Z",
+     "iopub.status.busy": "2024-01-27T17:16:40.527053Z",
+     "iopub.status.idle": "2024-01-27T17:16:40.556814Z",
+     "shell.execute_reply": "2024-01-27T17:16:40.555633Z"
     },
     "papermill": {
-     "duration": 0.042471,
-     "end_time": "2024-01-27T17:13:20.122677",
+     "duration": 0.041294,
+     "end_time": "2024-01-27T17:16:40.559714",
      "exception": false,
-     "start_time": "2024-01-27T17:13:20.080206",
+     "start_time": "2024-01-27T17:16:40.518420",
      "status": "completed"
     },
     "tags": []
@@ -876,19 +876,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "efdc985c",
+   "id": "b3d8e3fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:13:20.140942Z",
-     "iopub.status.busy": "2024-01-27T17:13:20.140445Z",
-     "iopub.status.idle": "2024-01-27T17:13:22.476176Z",
-     "shell.execute_reply": "2024-01-27T17:13:22.474959Z"
+     "iopub.execute_input": "2024-01-27T17:16:40.576105Z",
+     "iopub.status.busy": "2024-01-27T17:16:40.575729Z",
+     "iopub.status.idle": "2024-01-27T17:16:42.709742Z",
+     "shell.execute_reply": "2024-01-27T17:16:42.708253Z"
     },
     "papermill": {
-     "duration": 2.349189,
-     "end_time": "2024-01-27T17:13:22.479034",
+     "duration": 2.145709,
+     "end_time": "2024-01-27T17:16:42.712451",
      "exception": false,
-     "start_time": "2024-01-27T17:13:20.129845",
+     "start_time": "2024-01-27T17:16:40.566742",
      "status": "completed"
     },
     "tags": []
@@ -898,13 +898,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8101\n",
-      "Precision: 0.8704\n",
-      "Recall: 0.6351\n",
-      "F1 Score: 0.7344\n",
+      "Accuracy: 0.8268\n",
+      "Precision: 0.8308\n",
+      "Recall: 0.7297\n",
+      "F1 Score: 0.7770\n",
       "Confusion Matrix:\n",
-      "[[98  7]\n",
-      " [27 47]]\n",
+      "[[94 11]\n",
+      " [20 54]]\n",
       "Your submission was successfully saved!\n"
      ]
     }
@@ -914,6 +914,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "# Select features\n",
@@ -929,9 +930,10 @@
     "# Initialize RandomForestClassifier and DecisionTreeClassifier\n",
     "rf_model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
     "dt_model = DecisionTreeClassifier(random_state=1)\n",
+    "svc_model = SVC()\n",
     "\n",
     "# Create a VotingClassifier with the two models\n",
-    "model = VotingClassifier(estimators=[('rf', rf_model), ('dt', dt_model)], voting='hard')\n",
+    "model = VotingClassifier(estimators=[('rf', rf_model), ('dt', dt_model), ('svc', svc_model)], voting='hard')\n",
     "\n",
     "# Train the model on the training set\n",
     "model.fit(X_train, y_train)\n",
@@ -963,13 +965,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a5403a5",
+   "id": "52826ec5",
    "metadata": {
     "papermill": {
-     "duration": 0.006674,
-     "end_time": "2024-01-27T17:13:22.492833",
+     "duration": 0.006869,
+     "end_time": "2024-01-27T17:16:42.726538",
      "exception": false,
-     "start_time": "2024-01-27T17:13:22.486159",
+     "start_time": "2024-01-27T17:16:42.719669",
      "status": "completed"
     },
     "tags": []
@@ -1015,14 +1017,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.061389,
-   "end_time": "2024-01-27T17:13:23.222416",
+   "duration": 7.615031,
+   "end_time": "2024-01-27T17:16:43.455598",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-27T17:13:15.161027",
+   "start_time": "2024-01-27T17:16:35.840567",
    "version": "2.4.0"
   }
  },
