Kaggle Notebook | Titanic Competition Analysis | Version 11

--- a/titanic-competition-analysis.ipynb
+++ b/titanic-competition-analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0905760f",
+   "id": "d37ddba9",
    "metadata": {
     "papermill": {
-     "duration": 0.00511,
-     "end_time": "2024-01-27T17:16:39.454066",
+     "duration": 0.005588,
+     "end_time": "2024-01-27T17:18:51.580581",
      "exception": false,
-     "start_time": "2024-01-27T17:16:39.448956",
+     "start_time": "2024-01-27T17:18:51.574993",
      "status": "completed"
     },
     "tags": []
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60bf56bf",
+   "id": "b09cc3df",
    "metadata": {
     "papermill": {
-     "duration": 0.004407,
-     "end_time": "2024-01-27T17:16:39.463537",
+     "duration": 0.004278,
+     "end_time": "2024-01-27T17:18:51.589751",
      "exception": false,
-     "start_time": "2024-01-27T17:16:39.459130",
+     "start_time": "2024-01-27T17:18:51.585473",
      "status": "completed"
     },
     "tags": []
@@ -38,21 +38,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9fb61c37",
+   "id": "b00a0b7f",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:39.475337Z",
-     "iopub.status.busy": "2024-01-27T17:16:39.474524Z",
-     "iopub.status.idle": "2024-01-27T17:16:39.917574Z",
-     "shell.execute_reply": "2024-01-27T17:16:39.916104Z"
+     "iopub.execute_input": "2024-01-27T17:18:51.600589Z",
+     "iopub.status.busy": "2024-01-27T17:18:51.600166Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.037132Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.036024Z"
     },
     "papermill": {
-     "duration": 0.452306,
-     "end_time": "2024-01-27T17:16:39.920537",
+     "duration": 0.445497,
+     "end_time": "2024-01-27T17:18:52.039771",
      "exception": false,
-     "start_time": "2024-01-27T17:16:39.468231",
+     "start_time": "2024-01-27T17:18:51.594274",
      "status": "completed"
     },
     "tags": []
@@ -91,19 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "52d3ccbd",
+   "id": "28e30baa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:39.933749Z",
-     "iopub.status.busy": "2024-01-27T17:16:39.932662Z",
-     "iopub.status.idle": "2024-01-27T17:16:39.981993Z",
-     "shell.execute_reply": "2024-01-27T17:16:39.980804Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.051462Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.050907Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.109040Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.107743Z"
     },
     "papermill": {
-     "duration": 0.058806,
-     "end_time": "2024-01-27T17:16:39.984710",
+     "duration": 0.066898,
+     "end_time": "2024-01-27T17:18:52.111701",
      "exception": false,
-     "start_time": "2024-01-27T17:16:39.925904",
+     "start_time": "2024-01-27T17:18:52.044803",
      "status": "completed"
     },
     "tags": []
@@ -261,19 +261,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b8642aa8",
+   "id": "e9be40a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:39.997382Z",
-     "iopub.status.busy": "2024-01-27T17:16:39.996990Z",
-     "iopub.status.idle": "2024-01-27T17:16:40.022953Z",
-     "shell.execute_reply": "2024-01-27T17:16:40.021793Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.124186Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.123808Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.146972Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.145893Z"
     },
     "papermill": {
-     "duration": 0.03563,
-     "end_time": "2024-01-27T17:16:40.025697",
+     "duration": 0.032456,
+     "end_time": "2024-01-27T17:18:52.149638",
      "exception": false,
-     "start_time": "2024-01-27T17:16:39.990067",
+     "start_time": "2024-01-27T17:18:52.117182",
      "status": "completed"
     },
     "tags": []
@@ -418,19 +418,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2175801c",
+   "id": "ffd56681",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:40.038912Z",
-     "iopub.status.busy": "2024-01-27T17:16:40.038461Z",
-     "iopub.status.idle": "2024-01-27T17:16:40.049515Z",
-     "shell.execute_reply": "2024-01-27T17:16:40.048675Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.162435Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.162019Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.173294Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.172120Z"
     },
     "papermill": {
-     "duration": 0.021099,
-     "end_time": "2024-01-27T17:16:40.052537",
+     "duration": 0.020819,
+     "end_time": "2024-01-27T17:18:52.176113",
      "exception": false,
-     "start_time": "2024-01-27T17:16:40.031438",
+     "start_time": "2024-01-27T17:18:52.155294",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "28b64389",
+   "id": "44dce2f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:40.066350Z",
-     "iopub.status.busy": "2024-01-27T17:16:40.065726Z",
-     "iopub.status.idle": "2024-01-27T17:16:40.073151Z",
-     "shell.execute_reply": "2024-01-27T17:16:40.071903Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.189032Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.188668Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.197149Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.195979Z"
     },
     "papermill": {
-     "duration": 0.016876,
-     "end_time": "2024-01-27T17:16:40.075368",
+     "duration": 0.017564,
+     "end_time": "2024-01-27T17:18:52.199391",
      "exception": false,
-     "start_time": "2024-01-27T17:16:40.058492",
+     "start_time": "2024-01-27T17:18:52.181827",
      "status": "completed"
     },
     "tags": []
@@ -490,19 +490,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c95530e",
+   "id": "eded12f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:40.089696Z",
-     "iopub.status.busy": "2024-01-27T17:16:40.088548Z",
-     "iopub.status.idle": "2024-01-27T17:16:40.116894Z",
-     "shell.execute_reply": "2024-01-27T17:16:40.115558Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.212707Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.212343Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.240887Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.240003Z"
     },
     "papermill": {
-     "duration": 0.038202,
-     "end_time": "2024-01-27T17:16:40.119510",
+     "duration": 0.038161,
+     "end_time": "2024-01-27T17:18:52.243139",
      "exception": false,
-     "start_time": "2024-01-27T17:16:40.081308",
+     "start_time": "2024-01-27T17:18:52.204978",
      "status": "completed"
     },
     "tags": []
@@ -647,19 +647,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "41d12745",
+   "id": "b28223bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:40.134193Z",
-     "iopub.status.busy": "2024-01-27T17:16:40.133749Z",
-     "iopub.status.idle": "2024-01-27T17:16:40.508697Z",
-     "shell.execute_reply": "2024-01-27T17:16:40.507452Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.257947Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.257110Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.618874Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.617814Z"
     },
     "papermill": {
-     "duration": 0.385301,
-     "end_time": "2024-01-27T17:16:40.511384",
+     "duration": 0.372498,
+     "end_time": "2024-01-27T17:18:52.621736",
      "exception": false,
-     "start_time": "2024-01-27T17:16:40.126083",
+     "start_time": "2024-01-27T17:18:52.249238",
      "status": "completed"
     },
     "tags": []
@@ -694,19 +694,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "608b5aa9",
+   "id": "dfb636f7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:40.527484Z",
-     "iopub.status.busy": "2024-01-27T17:16:40.527053Z",
-     "iopub.status.idle": "2024-01-27T17:16:40.556814Z",
-     "shell.execute_reply": "2024-01-27T17:16:40.555633Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.636430Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.636022Z",
+     "iopub.status.idle": "2024-01-27T17:18:52.664737Z",
+     "shell.execute_reply": "2024-01-27T17:18:52.663625Z"
     },
     "papermill": {
-     "duration": 0.041294,
-     "end_time": "2024-01-27T17:16:40.559714",
+     "duration": 0.038909,
+     "end_time": "2024-01-27T17:18:52.667100",
      "exception": false,
-     "start_time": "2024-01-27T17:16:40.518420",
+     "start_time": "2024-01-27T17:18:52.628191",
      "status": "completed"
     },
     "tags": []
@@ -876,19 +876,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b3d8e3fd",
+   "id": "10edf467",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-27T17:16:40.576105Z",
-     "iopub.status.busy": "2024-01-27T17:16:40.575729Z",
-     "iopub.status.idle": "2024-01-27T17:16:42.709742Z",
-     "shell.execute_reply": "2024-01-27T17:16:42.708253Z"
+     "iopub.execute_input": "2024-01-27T17:18:52.682551Z",
+     "iopub.status.busy": "2024-01-27T17:18:52.682145Z",
+     "iopub.status.idle": "2024-01-27T17:18:54.625943Z",
+     "shell.execute_reply": "2024-01-27T17:18:54.624882Z"
     },
     "papermill": {
-     "duration": 2.145709,
-     "end_time": "2024-01-27T17:16:42.712451",
+     "duration": 1.95441,
+     "end_time": "2024-01-27T17:18:54.628427",
      "exception": false,
-     "start_time": "2024-01-27T17:16:40.566742",
+     "start_time": "2024-01-27T17:18:52.674017",
      "status": "completed"
     },
     "tags": []
@@ -898,13 +898,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8268\n",
-      "Precision: 0.8308\n",
-      "Recall: 0.7297\n",
-      "F1 Score: 0.7770\n",
+      "Accuracy: 0.8101\n",
+      "Precision: 0.8704\n",
+      "Recall: 0.6351\n",
+      "F1 Score: 0.7344\n",
       "Confusion Matrix:\n",
-      "[[94 11]\n",
-      " [20 54]]\n",
+      "[[98  7]\n",
+      " [27 47]]\n",
       "Your submission was successfully saved!\n"
      ]
     }
@@ -914,7 +914,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
     "# Select features\n",
@@ -930,10 +929,9 @@
     "# Initialize RandomForestClassifier and DecisionTreeClassifier\n",
     "rf_model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
     "dt_model = DecisionTreeClassifier(random_state=1)\n",
-    "svc_model = SVC()\n",
     "\n",
     "# Create a VotingClassifier with the two models\n",
-    "model = VotingClassifier(estimators=[('rf', rf_model), ('dt', dt_model), ('svc', svc_model)], voting='hard')\n",
+    "model = VotingClassifier(estimators=[('rf', rf_model), ('dt', dt_model)], voting='hard')\n",
     "\n",
     "# Train the model on the training set\n",
     "model.fit(X_train, y_train)\n",
@@ -965,13 +963,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52826ec5",
+   "id": "0307746c",
    "metadata": {
     "papermill": {
-     "duration": 0.006869,
-     "end_time": "2024-01-27T17:16:42.726538",
+     "duration": 0.006504,
+     "end_time": "2024-01-27T17:18:54.642161",
      "exception": false,
-     "start_time": "2024-01-27T17:16:42.719669",
+     "start_time": "2024-01-27T17:18:54.635657",
      "status": "completed"
     },
     "tags": []
@@ -1017,14 +1015,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.615031,
-   "end_time": "2024-01-27T17:16:43.455598",
+   "duration": 7.17413,
+   "end_time": "2024-01-27T17:18:55.272568",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-27T17:16:35.840567",
+   "start_time": "2024-01-27T17:18:48.098438",
    "version": "2.4.0"
   }
  },
